added: new logic for commnets service 1. get comment by id 2. update a comment 3. delete a comment
