# pkg/common/models/comment.go
@@ -1,8 +1,8 @@
 package models
 
 type Comment struct {
-	// gorm.Model        // adds ID, Title, Author & Slug
-	ID     string `json:"id" gorm:"primary_key"`
+	// gorm.Model // adds ID, Title, Author & Slug
+	// ID     string `json:"id" gorm:"primary_key"`
 	Title  string `json:"title"`
 	Author string `json:"author"`
 	Slug   string `json:"slug"`
@@ -10,7 +10,13 @@ type Comment struct {
 
 type AddCommentRequestBody struct {
 	// gorm.Model
-	ID     string `json:"id"`
+	// ID     string `json:"id"`
+	Title  string `json:"title"`
+	Author string `json:"author"`
+	Slug   string `json:"slug"`
+}
+
+type UpdateCommentRequestBody struct {
 	Title  string `json:"title"`
 	Author string `json:"author"`
 	Slug   string `json:"slug"`
